# CodeAlpha_QuizApp_Qt

./: CMakeLists.txt  README.md
Ui/: home.cpp  home.h  home.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  question.cpp  question.h  question.ui  quiz.cpp  quiz.h  quiz.ui  quizinfo.cpp  quizinfo.h  quizinfo.ui  quizresult.cpp  quizresult.h  quizresult.ui  quizzes.cpp  quizzes.h  quizzes.ui  resource.qrc  results.cpp  results.h  results.ui  reviewquiz.cpp  reviewquiz.h  reviewquiz.ui  sidebar.cpp  sidebar.h  sidebar.ui  signup.cpp  signup.h  signup.ui
include/controllers/: home_controller.h  login_controller.h  main_controller.h  quiz_controller.h  quizzes_controller.h  results_controller.h  review_controller.h  signup_controller.h
include/model/: database.h  question.h  quiz.h  user.h
src/controllers/: home_controller.cpp  login_controller.cpp  main_controller.cpp  quiz_controller.cpp  quizzes_controller.cpp  results_controller.cpp  review_controller.cpp  signup_controller.cpp
src/model/: database.cpp  question.cpp  quiz.cpp  user.cpp
